updated web interface

--- a/Multimodal_Fashion_RecSys/web_interface.ipynb
+++ b/Multimodal_Fashion_RecSys/web_interface.ipynb
@@ -636,6 +636,7 @@
     "\n",
     "title = widgets.HTML(value=\"<h1>Product Recommendation System</h1>\")\n",
     "text_1 = widgets.HTML(value=\"<h2>Similar Products</h2>\")\n",
+    "text_1 = widgets.HTML(value=\"<h2>Inspired By Your Choices</h2>\")\n",
     "\n",
     "box_layout = widgets.Layout(align_items='center')\n",
     "title_text = widgets.VBox([title], layout=box_layout)\n",
@@ -844,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "000b1371",
+   "id": "1565f04d",
    "metadata": {},
    "outputs": [],
    "source": []
